TestSuite/Verification/Error/Parallel/Correctness/On-Device/Inter-Region/CPU/ReduceTest.par
ReduceTest{

reduction sum([Int] input): Int res{
    res += input[INDEX]
}

seq main() : Int {
    var [Int] initial = init_List([200],1)
    var Int result = 0
    
    /*execute the pattern on node 0 device 0 */
    result = sum<<<[0,0,0],[0,0,1]>>>(initial)
    
    
    if result != 200 {
        print("summation not correct!")
        exit(1)
    }
    
return 0 
}}
